Fix Product Cards alignment

--- a/day_2/a2/style.css
+++ b/day_2/a2/style.css
@@ -10,6 +10,9 @@
   background: #fff;
   transition: 0.5s;
   cursor: pointer;
+  margin: auto;
+  margin-bottom: 20px;
+  max-width: 500px;
 }
 
 .box-shadow {
@@ -44,6 +47,7 @@
 .active-card {
   transform: scale(1.1);
   box-shadow: 0 0 20px 5px rgba(235, 234, 234, 0.8);
+  z-index: 100;
 }
 
 .active-card {
